Refactor code, add throwing 404 Error to client.